tests/paczka1/fuzzy1/45231429.err
Error in line 6: S665 S665 45,2
Error in line 10: OzyJWW9sbn S665 85,5
Error in line 16: OzyJWW9sbn S718 3#,2
Error in line 17: 8ClSCL S665 36,1
Error in line 18: 8ClSCL S143 14,2
Error in line 22: 8ClSCL S718 39,7
Error in line 13: OzyJWW9sbn S718 65,7
Error in line 34: OzyJWW9sbn S665 51,5
